fix: editPage button overflow when page is translated

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -412,7 +412,10 @@ a.active {
   bottom: 105px;
   font-size: 10px;
   text-decoration: none;
-  line-height: 3;
+  min-height: 35px;
+  height: auto;
+  align-content: center;
+  line-height: 1.4;
 }
 
 .editPage:hover {
